{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 27,
  "lineage": "471ce65c-0fa9-4ec1-5eac-8fd9ddcb261b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:787230020442:instance/i-08ebc4b70621dcb93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ebc4b70621dcb93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "common",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ab842ea3d4522403"
              }
            ],
            "primary_network_interface_id": "eni-0ab842ea3d4522403",
            "private_dns": "ip-172-31-0-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.34",
            "public_dns": "ec2-3-219-33-123.compute-1.amazonaws.com",
            "public_ip": "3.219.33.123",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-079399e4cbd74c024",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc_ssh",
              "vpc_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c86de2469dda9a62",
            "tags": {
              "Name": "Dummy Ec2-us-east-1a"
            },
            "tags_all": {
              "Name": "Dummy Ec2-us-east-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023bf4895c2c6dc8e",
              "sg-05c445c36d580e1a4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "i-08ebc4b70621dcb93",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_ssh",
            "aws_security_group.vpc_web",
            "data.aws_ami.amazon_linux_3",
            "data.aws_availability_zones.my_azs",
            "data.aws_ec2_instance_type_offerings.my_instance_type"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:787230020442:instance/i-0df685bc9d04267d6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df685bc9d04267d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "common",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c86a3b0540261295"
              }
            ],
            "primary_network_interface_id": "eni-0c86a3b0540261295",
            "private_dns": "ip-172-31-88-61.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.88.61",
            "public_dns": "ec2-44-201-222-28.compute-1.amazonaws.com",
            "public_ip": "44.201.222.28",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-016adad45d3eb73b0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc_ssh",
              "vpc_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0895b5f0327d6bf33",
            "tags": {
              "Name": "Dummy Ec2-us-east-1b"
            },
            "tags_all": {
              "Name": "Dummy Ec2-us-east-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023bf4895c2c6dc8e",
              "sg-05c445c36d580e1a4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "i-0df685bc9d04267d6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_ssh",
            "aws_security_group.vpc_web",
            "data.aws_ami.amazon_linux_3",
            "data.aws_availability_zones.my_azs",
            "data.aws_ec2_instance_type_offerings.my_instance_type"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:787230020442:instance/i-0630b5afd2d795a13",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0630b5afd2d795a13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "common",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c7d570e3a3fe1c46"
              }
            ],
            "primary_network_interface_id": "eni-0c7d570e3a3fe1c46",
            "private_dns": "ip-172-31-26-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.37",
            "public_dns": "ec2-54-173-79-97.compute-1.amazonaws.com",
            "public_ip": "54.173.79.97",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ec150044f9505a5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc_ssh",
              "vpc_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0856e57739674998b",
            "tags": {
              "Name": "Dummy Ec2-us-east-1c"
            },
            "tags_all": {
              "Name": "Dummy Ec2-us-east-1c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023bf4895c2c6dc8e",
              "sg-05c445c36d580e1a4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "i-0630b5afd2d795a13",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_ssh",
            "aws_security_group.vpc_web",
            "data.aws_ami.amazon_linux_3",
            "data.aws_availability_zones.my_azs",
            "data.aws_ec2_instance_type_offerings.my_instance_type"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:787230020442:instance/i-04355da0cb78030ba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04355da0cb78030ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "common",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-048fa138eaac79366"
              }
            ],
            "primary_network_interface_id": "eni-048fa138eaac79366",
            "private_dns": "ip-172-31-44-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.127",
            "public_dns": "ec2-54-204-87-160.compute-1.amazonaws.com",
            "public_ip": "54.204.87.160",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04f1d9b33fa7495fa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc_ssh",
              "vpc_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-056dee5cff72e9164",
            "tags": {
              "Name": "Dummy Ec2-us-east-1d"
            },
            "tags_all": {
              "Name": "Dummy Ec2-us-east-1d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023bf4895c2c6dc8e",
              "sg-05c445c36d580e1a4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "i-04355da0cb78030ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_ssh",
            "aws_security_group.vpc_web",
            "data.aws_ami.amazon_linux_3",
            "data.aws_availability_zones.my_azs",
            "data.aws_ec2_instance_type_offerings.my_instance_type"
          ]
        },
        {
          "index_key": "us-east-1f",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a59ec92177ec3fad",
            "arn": "arn:aws:ec2:us-east-1:787230020442:instance/i-0f8111488a5f008bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8111488a5f008bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "common",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bd4b88ff73bdb5f8"
              }
            ],
            "primary_network_interface_id": "eni-0bd4b88ff73bdb5f8",
            "private_dns": "ip-172-31-72-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.72.88",
            "public_dns": "ec2-34-236-38-202.compute-1.amazonaws.com",
            "public_ip": "34.236.38.202",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-020a364fa27742184",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc_ssh",
              "vpc_web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06878dd8d888d1ef4",
            "tags": {
              "Name": "Dummy Ec2-us-east-1f"
            },
            "tags_all": {
              "Name": "Dummy Ec2-us-east-1f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023bf4895c2c6dc8e",
              "sg-05c445c36d580e1a4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "i-0f8111488a5f008bf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_ssh",
            "aws_security_group.vpc_web",
            "data.aws_ami.amazon_linux_3",
            "data.aws_availability_zones.my_azs",
            "data.aws_ec2_instance_type_offerings.my_instance_type"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787230020442:security-group/sg-023bf4895c2c6dc8e",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023bf4895c2c6dc8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 22 in Inbound Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_ssh",
            "name_prefix": "",
            "owner_id": "787230020442",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0254f99aab7df53e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "sg-023bf4895c2c6dc8e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787230020442:security-group/sg-05c445c36d580e1a4",
            "description": "Allow web access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c445c36d580e1a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 443 in Inbound Rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 80 in Inbound Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_web",
            "name_prefix": "",
            "owner_id": "787230020442",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_traffice"
            },
            "tags_all": {
              "Name": "allow_web_traffice"
            },
            "timeouts": null,
            "vpc_id": "vpc-0254f99aab7df53e6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "787230020442",
            "id": "sg-05c445c36d580e1a4",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}